[project]
name = "tmwih"
version = "0.1.0"
description = "Tell Me Where It Hurts: Cost-Effective Encoder Improvement via Attribution-Guided LLM Augmentation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.19",
    "captum>=0.7",
    "openai>=1.30",
    "scikit-learn>=1.4",
    "wandb>=0.17",
    "tqdm",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120
